--- a/docs/custom.css
+++ b/docs/custom.css
@@ -2,21 +2,17 @@
     background-color: #3a4a54; /* Your desired color */
 }
 
-/* Style the navigation links */
-.nav-links {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 1.1em;
-}
 
-.nav-links a {
-    color: #007acc; /* Adjust color as desired */
+.btn {
+    color: #0000ff;
+    border-color: #0000ff;
+    background-color: #008CBA;
+}
+    
+    
+.btn:hover {
+    color: #0bb6e1cc;
     text-decoration: none;
-    padding: 0 15px;
+    background-color: #7c940ea1;
+    border-color: #0000ff;
 }
-
-.nav-links a:hover {
-    color: #005fa3; /* Adjust hover color */
-    text-decoration: underline;
-}
-
