--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
         {% endif %}
         <!-- Additional custom buttons -->
-        <a href="https://marinelebrec.github.io/" class="btn">Home</a>
+        <a href="{{ '/' | relative_url }}" class="btn">Home</a>
         <a href="{{ '/aboutme/' | relative_url }}" class="btn">About Me</a>
         <a href="{{ '/projects' | relative_url }}" class="btn">My Projects</a>
         <a href="https://github.com/MarineLebrec" class="btn">Visit My GitHub</a>
