--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
         {% endif %}
         <!-- Additional custom buttons -->
         <a href="{{ '/' | relative_url }}" class="btn">Home</a>
+        <a href="{{ '/projects' | relative_url }}" class="btn">My Projects</a>    
         <a href="{{ '/pubs' | relative_url }}" class="btn">Publications & Presentations</a>
         <a href="https://github.com/MarineLebrec" class="btn">Visit My GitHub</a>
-        <a href="/assets/files/resume.pdf" class="btn" download>Download Resume</a>
+        <!-- <a href="/assets/files/resume.pdf" class="btn" download>Download Resume</a> -->
     </header>
 
     <main id="content" class="main-content" role="main">
