--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% endif %}
         <!-- Additional custom buttons -->
         <a href="{{ '/' | relative_url }}" class="btn">Home</a>
-        <a href="{{ '/projects' | relative_url }}" class="btn">My Projects</a>    
+        <a href="{{ '/projects' | relative_url }}" class="btn">Recent Projects</a>    
         <a href="{{ '/pubs' | relative_url }}" class="btn">Publications & Presentations</a>
         <a href="https://github.com/MarineLebrec" class="btn">Visit My GitHub</a>
         <!-- <a href="/assets/files/resume.pdf" class="btn" download>Download Resume</a> -->
