--- a/docs/custom.css
+++ b/docs/custom.css
@@ -1,7 +1,7 @@
 .page-header {
-    background-color: #3a4a54; /* Your desired color */
+    background-color: #3a4a54 !important; /* Your desired solid color */
+    background-image: none !important; /* Remove gradient */
 }
-
 
 .btn {
     color: #0000ff;
